2009-08-24:
===========

- Fixed the simple demo to "work" in MSIE. That is: it should nicely tell the 
user that PaintWeb does not work. Before this update, the scripts had JS 
"errors".

- Improved the Bézier curve. When only two points were available, the line drawn 
didn't use the correct color.

- Fixed an image save bug. At times it did "err", because the first argument of 
the imageSave() method is a DOM event object instead of a string when invoked as 
a command from the toolbar.

2009-08-23:
===========

- Fixed the config JSON files. Now PaintWeb loads in Safari 4, once again.  
Thanks to Dan Poltawski for his bug report and his time for testing.

- The Moodle extension now displays a quickform validation error when the user 
tries to submit a form while editing an image with unsaved changes, as suggested 
by Martin Langhoff.

- The Moodle extension now hides the textarea[format] selection drop-down while 
PaintWeb is visible.

2009-08-20:
===========

- Added a new option to the TinyMCE plugin: syncViewportSize. This allows you to 
enable/disable the PaintWeb image viewport size synchronization between TinyMCE 
and PaintWeb.

- Now the TinyMCE plugin properly handles form submission while the user is 
editing an image. If the image has changes, then form submission is cancelled.  
The user is informed that the form submission is cancelled because the image 
changes are not saved.

Thanks to Dan Poltawski for this suggestion!

- Added a new option to the TinyMCE plugin: onSubmitUnsaved. This allows you to 
provide an event handler function which is invoked *only* when the user attempts 
to perform form submission while editing an image which has unsaved changes.  
Using this option you can provide custom user feedback for when the form 
submission "fails" due to the aforementioned reasons. Your event handler is 
passed three paramaters: the DOM event object (form submit), a reference to the 